src/app/layout/package/package-list/package-list.component.scss
:host() {
    //  overflow:hidden;
}
.zui-wrapper__fix{
    height: calc(100vh - 315px);
}
.mark-status {
    padding: 4px;
    border-radius: 5px;
    color: white;
    width: 100%;
    text-align: center;
}

.color {
    a {
        color: #19a3b9;
    }

    a:hover {
        color: #478993;
    }
}

.control__filter--maxheight {
    height: 100%;
    padding-bottom: 0.4rem;
}

.control__slider--margin {
    margin-top: .5rem;
    margin-bottom: .5rem;
}

.custor-filter-bar {
    padding: 0px;

    .flex-pad {
        padding: 0.7rem 0rem 1rem;
    }
}

.calendarInput {
    margin-left: 10px !important;
}

span {
    float: left;
    text-align: center;
}

table.dataTable {
    tr:nth-child(odd) {
        background-color: #fafbfc;
    }

    .star-color {
        color: #fbc439;
    }

    th:first-child,
    td:first-child {
        width: 60px !important;
        max-width: 60px;
    }

    th,
    td[type="check"] {
        width: 60px !important;
    }

    th[type="check-action"],
    td[type="check-action"] {
        width: 100px !important;
    }

    th:not([type="check"]),
    td:not([type="check"]) {
        min-width: 100px;
        max-width: 160px;

    }

    overflow-x: scroll;
    overflow-y: scroll;
}

table {

    th:not([type="check"]),
    td:not([type="check"]) {
        min-width: 100px;
        max-width: 160px;
    }
}

.grid-container {
    display: grid;
    grid-template-columns: 30px freg
}

input.icon {
    font-family: FontAwesome, "Open Sans", Verdana, sans-serif;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
}

@media only screen and (max-width: 3000px) {
    .main-table {
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 70px;
    }

    .HSMT {
        max-width: 300px;
    }
}

@media only screen and (max-width: 1600px) {
    .custom-filter-bar {
        zoom: 0.9;
    }
}

@media only screen and (max-width: 1420px) {
    .custom-filter-bar {
        zoom: 0.88;
    }
}

@media only screen and (max-width: 1400px) {
    .custom-filter-bar {
        zoom: 0.87;
    }
}

@media only screen and (max-width: 1380px) {
    .custom-filter-bar {
        zoom: 0.86;
    }
}

@media only screen and (max-width: 1366px) {

    .custom-filter-bar {
        zoom: 0.85;
    }
}

@media only screen and (max-width: 1358px) {

    .custom-filter-bar {
        zoom: 0.84;
    }
}

@media only screen and (max-width: 1350px) {
    .custom-filter-bar {
        zoom: 0.82;
    }
}

@media only screen and (max-width: 1328px) {
    .custom-filter-bar {
        zoom: 0.81;
    }
}

@media only screen and (max-width: 1320px) {
    .custom-filter-bar {
        zoom: 0.8;
    }
}

@media only screen and (max-width: 1295px) {
    .custom-filter-bar {
        zoom: 0.78;
    }
}

@media only screen and (max-width: 1275px) {
    .custom-filter-bar {
        zoom: 0.76;
    }
}

@media only screen and (max-width: 1250px) {
    .custom-filter-bar {
        zoom: 0.74;
    }
}

@media only screen and (max-width: 1225px) {
    .custom-filter-bar {
        zoom: 0.73;
    }
}

@media only screen and (max-width: 1220px) {
    .custom-filter-bar {
        zoom: 0.72;
    }
}

@media only screen and (max-width: 1200px) {
    .custom-filter-bar {
        zoom: 0.678;
    }
}

@media only screen and (max-width: 1160px) {
    .custom-filter-bar {
        zoom: 0.67;
    }
}

@media only screen and (max-width: 1150px) {
    .main-table {
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 70px;
    }

    table.dataTable {
        zoom: 0.72;
    }

    .status-filter {
        zoom: 0.85;
    }

    .custom-filter-bar {
        zoom: 0.65;
    }
}

@media only screen and (max-width: 1120px) {
    .custom-filter-bar {
        zoom: 0.63;
    }
}

@media only screen and (max-width: 1100px) {
    .custom-filter-bar {
        zoom: 0.6;
    }
}

@media only screen and (max-width: 1083px) {
    .custom-filter-bar {
        zoom: 0.565;
    }
}


@media only screen and (max-width: 1024px) {
    .main-table {
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 55px;
    }

    .btn-toolbar {
        zoom: 0.85;
    }

    .status-filter {
        zoom: 0.75;
    }

    .custom-filter-bar {
        zoom: 0.65;
    }
}

@media only screen and (max-width: 1010px) {
    .main-table {
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 65px;
    }

    .status-filter {
        zoom: 0.65;
    }

    .custom-filter-bar {
        zoom: 0.63;
    }
}

@media only screen and (max-width: 997px) {
    .main-table {
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 50px;
    }

    .status-filter {
        zoom: 0.45;
    }

    .custom-filter-bar {
        zoom: 0.6;
    }
}

.fileUpload {
    position: relative;
    overflow: hidden;
}

.fileUpload input.upload {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    padding: 0;
    font-size: 20px;
    cursor: pointer;
    opacity: 0;
    filter: alpha(opacity=0);
}

a {
    cursor: pointer;
}

.calendarInput {}

.type-task {
    color: #ff6b81;
}

.type-event {
    color: #2ed573;
}

.title-list-package {
    position: absolute;
    box-shadow: 0 1pt 12pt rgba(0, 0, 0, .15);
    height: 55px;
    padding: 0 15px;

    .list-package {
        font-size: 120%;
        font-weight: 400;
    }

    // position: fixed;
    transition: margin 0.5s;
    /* IE 10+, Fx 29+ */
    // width: calc(100% - 200px);
    width: 100%;
    //  min-width: calc(100% - 70px);
    background-color: #ffff;
    z-index: 10000;
}


select.form-control:not([size]):not([multiple]) {
    height: auto !important;
}

.parent {
    width: 100%;
    height: calc(100% + 70px);
}

.input-checkbox {
    background-color: #ffff !important;
}

.custom-control-input {
    background-color: #ffff !important;
}

.custom-checkbox {
    //background-color: #ffff!important;
}

.range {

    .min {
        float: left;
    }

    .max {
        float: right;
    }
}

.dropdown-menu-left {}

.popup-dynamic-col {
    padding: 10px 20px;

    .wrapper {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-column-gap: 10px;
        grid-row-gap: 1em;
        overflow: hide;
        height: 160px;
        overflow-y: scroll;

        .form-check-label {
            padding: 0;
        }
    }
}

// ::-webkit-scrollbar {
//     width: 6px;
//     cursor: pointer;

// }
//  #style-scroll::-webkit-scrollbar {
//     height: 8px;
//     cursor: pointer;

//  }

// ::-webkit-scrollbar-track {
//     background-color:#f8f8f8;
//  // border-radius: 5px;

// }
// ::-webkit-scrollbar-thumb {
//     background-color: #c6c6c6;
//     cursor: pointer;
// }

.tamgiac {
    width: 0;
    height: 0;
    top: -50px;
    border: 0 solid transparent;
    border-right-width: 132px;
    border-left-width: 132px;
    border-bottom: 229px solid black;
}

.dropdown-menu::before {
    position: absolute;
    top: -12px;
    left: 672px;
    display: inline-block;
    border-right: 12px solid transparent;
    border-bottom: 12px solid #CCC;
    border-left: 12px solid transparent;
    border-bottom-color: rgba(0, 0, 0, 0.2);
    content: '';
}

.dropdown-menu::after {
    position: absolute;
    top: -11px;
    left: 673px;
    display: inline-block;
    border-right: 11px solid transparent;
    border-bottom: 11px solid white;
    border-left: 11px solid transparent;
    content: '';
}

/**
   * Checkbox Five
   */
.checkboxFive {
    width: 25px;
    margin: 20px 100px;
    position: relative;
}

/**
   * Create the box for the checkbox
   */
.checkboxFive label {
    cursor: pointer;
    position: absolute;
    width: 25px;
    height: 25px;
    top: 0;
    left: 0;
    background: #eee;
    border: 1px solid #ddd;
}

/**
   * Display the tick inside the checkbox
   */
.checkboxFive label:after {
    opacity: 0.2;
    content: '';
    position: absolute;
    width: 9px;
    height: 5px;
    background: transparent;
    top: 6px;
    left: 7px;
    border: 3px solid #333;
    border-top: none;
    border-right: none;

    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    transform: rotate(-45deg);
}

/**
   * Create the hover event of the tick
   */
.checkboxFive label:hover::after {
    opacity: 0.5;
}

/**
   * Create the checkbox state for the tick
   */
.checkboxFive input[type=checkbox]:checked+label:after {
    opacity: 1;
}

// .dataTables_wrapper.no-footer .dataTables_scrollBody{
//     border-bottom: none!important;
// }


.title-detail-toggle {
    // width: calc(100% - 55px)!important;
    width: 100%;
    transition: margin 0.5s;
    /* IE 10+, Fx 29+ */

}

.cus-pointer {
    cursor: pointer;
}

.sorting-asc {
    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAATCAYAAAByUDbMAAAAZ0lEQVQ4y2NgGLKgquEuFxBPAGI2ahhWCsS/gDibUoO0gPgxEP8H4ttArEyuQYxAPBdqEAxPBImTY5gjEL9DM+wTENuQahAvEO9DMwiGdwAxOymGJQLxTyD+jgWDxCMZRsEoGAVoAADeemwtPcZI2wAAAABJRU5ErkJggg==");
    cursor: pointer;
    background-repeat: no-repeat;
    background-position: center right;
}

.sorting {
    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAATCAQAAADYWf5HAAAAkElEQVQoz7XQMQ5AQBCF4dWQSJxC5wwax1Cq1e7BAdxD5SL+Tq/QCM1oNiJidwox0355mXnG/DrEtIQ6azioNZQxI0ykPhTQIwhCR+BmBYtlK7kLJYwWCcJA9M4qdrZrd8pPjZWPtOqdRQy320YSV17OatFC4euts6z39GYMKRPCTKY9UnPQ6P+GtMRfGtPnBCiqhAeJPmkqAAAAAElFTkSuQmCC");
    cursor: pointer;
    background-repeat: no-repeat;
    background-position: center right;
}

.sorting-desc {
    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAATCAYAAAByUDbMAAAAZUlEQVQ4y2NgGAWjYBSggaqGu5FA/BOIv2PBIPFEUgxjB+IdQPwfC94HxLykus4GiD+hGfQOiB3J8SojEE9EM2wuSJzcsFMG4ttQgx4DsRalkZENxL+AuJQaMcsGxBOAmGvopk8AVz1sLZgg0bsAAAAASUVORK5CYII=");
    cursor: pointer;
    background-repeat: no-repeat;
    background-position: center right;
}


.dataTables_empty {
    display: none !important;
}

.ellipsis {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    color: #00a0e3;
}

:host /deep/ .dataTables_empty {
    display: none !important;
}

.set-height-table {
    height: calc(100vh - 305px);
}

:host /deep/ .flex-row {
    flex-direction: row !important;
    height: 20px !important;
}

:host /deep/ .dataTables_wrapper {
    position: inherit !important;
}

.d-none {
    padding: 0 !important;
}

:host /deep/ {
    .custom-control {
        padding-left: 1.5rem;
    }
}

